# Wezzy

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
src/: args.rs  components.rs  inputs.rs  main.rs
