[package]
name = "bevy_wizards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["wayland"] }
bevy_ggrs = { version = "0.14", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8", features = ["ggrs"] }
